@@ -1,3 +1,10 @@
+2008-05-02  Paolo Borelli  <pborelli@katamail.com>
+
+	* src/baobab-scan.c:
+	* src/baobab-scan.h:
+	* src/baobab.c:
+	Rename getDir to baobab_scan_execute and make it take a GFile.
+
 2008-05-02  Fabio Marzocca  <thesaltydog@gmail.com>
 
 	* src/baobab-scan.c: 
